# mad-location-manager

./: .gitignore  .gitmodules  .luarc.json  README.md  build.gradle  license  prepare.sh  settings.gradle
.github/workflows/: bintray.yml
C/: .gitignore  maps.pro
C/include/: Commons.h  Coordinates.h  GPSAccKalman.h  GPSAccKalman2.h  Geohash.h  Kalman.h  MadgwickAHRS.h  Matrix.h  MeanFilter.h  SensorController.h  mainwindow.h
C/src/: Coordinates.cpp  GPSAccKalman.cpp  GPSAccKalman2.cpp  Geohash.cpp  Kalman.cpp  MadgwickAHRS.cpp  Matrix.cpp  MeanFilter.cpp  SensorController.cpp  main.cpp  mainwindow.cpp
C/tests/include/: CoordinatesTest.h  GeohashTest.h  MatrixTest.h  SensorControllerTest.h
C/tests/src/: CoordinatesTest.cpp  GeohashTest.cpp  MatrixTest.cpp  SensorControllerTest.cpp
Java/SensorDataCollector/: build.gradle  settings.gradle
Java/SensorDataCollector/app/: build.gradle
Java/SensorDataCollector/gpsacckalmanfusion/: build.gradle
Java/SensorDataCollector/gradle/wrapper/: gradle-wrapper.properties
Java/SensorDataCollector/madlocationmanager/: build.gradle
app/: build.gradle  local.properties  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: settings.xml  (+2 more)
data_generator/generators_output/: trajectory1.txt
data_generator/mlm_data_generator/: .gitignore  .nvim.lua  Makefile  compile_commands.json
data_generator/mlm_data_generator/data_generator/: .nvim.lua  CMakeLists.txt
data_generator/mlm_data_generator/data_generator/inc/: coordinate.h  sd_generator.h  sensor_data.h
data_generator/mlm_data_generator/data_generator/src/: coordinate_hq.cpp  coordinate_lq.cpp  main.cpp  main_generator.cpp  sd_generator.cpp
data_generator/mlm_data_generator/data_generator/tests/: coordinate.cpp  sd_generator.cpp
data_generator/mlm_data_generator/inc/: coordinate.h  sd_generator.h  sensor_data.h
data_generator/mlm_data_generator/src/: commons.cpp  coordinate_hq.cpp  coordinate_lq.cpp  main.cpp  sd_generator.cpp
data_generator/mlm_data_generator/tests/: coordinate.cpp  sd_generator.cpp
data_generator/mlm_data_generator/visualizator/: .clang-format  .gitignore  .nvim.lua  CMakeLists.txt  Makefile
data_generator/mlm_data_generator/visualizator/inc/: main_window.h
data_generator/mlm_data_generator/visualizator/resources/: map_marker_blue.h  map_marker_red.h
data_generator/mlm_data_generator/visualizator/src/: main.cpp  main.cpp.back  main_window.cpp
gradle/wrapper/: gradle-wrapper.properties
ios/MLMSensor/: README.md
ios/MLMSensor/MLMSensor.xcodeproj/: project.pbxproj
ios/MLMSensor/MLMSensorTests/: MLMSensorTests.swift
ios/MLM_example/: README.md
ios/MLM_example/MLM/: AppDelegate.swift  Info.plist
ios/MLM_example/MLM.xcodeproj/: project.pbxproj
ios/MLM_example/MLMTests/: MLMTests.swift
lib/: .gitignore  Makefile  build_ios.sh  clang-format  conv.py  examples  mlm.pro
lib/android-example/: settings.gradle.kts
lib/android-example/app/: build.gradle.kts
lib/android-example/app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt_back  mlmJNI.cpp
lib/android-example/app/src/main/cpp/inc/: commons.h  geohash.h  gps_acc_fusion_filter.h  mlm.h  sd_generator.h  sensor_data.h
lib/android-example/app/src/main/cpp/src/: commons.cpp  geohash.cpp  gps_acc_fusion_filter.cpp  mlm.cpp  sd_generator.cpp
lib/android-example/app/src/main/cpp/tests/: geohash_test.cpp
lib/android-example/gradle/: libs.versions.toml
lib/data_generator/data_generator/: .gitignore  .nvim.lua
lib/data_generator/generator/: .clang-format  .nvim.lua
lib/data_generator/visualizator/: .nvim.lua  CMakeLists.txt
lib/filter/: .nvim.lua  CMakeLists.txt
lib/filter/exe/: main.cpp
lib/filter/inc/: commons.h  gps_acc_fusion_filter.h  kalman.h  madgwick_AHRS.h  matrix.h  mlm.h  quaternion.h  sensor_data.h
lib/filter/src/: geohash.cpp  gps_acc_fusion_filter.cpp  madgwick_AHRS.cpp  main.cpp  mlm.cpp  quaternion.cpp  sensor_data.cpp  vector3d.cpp
lib/filter/tests/: geohash_test.cpp  matrix_test.cpp
lib/generator/: CMakeLists.txt
lib/generator/inc/: main_generator.h  sd_generator.h
lib/generator/src/: main.cpp  main_generator.cpp  sd_generator.cpp
lib/generator/tests/: coordinate.cpp  sd_generator.cpp
lib/inc/: Commons.h  Commons.hpp  Coordinates.h  Coordinates.hpp  GPSAccKalman.h  Geohash.h  Geohash.hpp  GpsAccFusionFilter.h  GpsAccFusionFilter.hpp  Kalman.h  Kalman.hpp  MadgwickAHRS.h  MadgwickAHRS.hpp  Matrix.h  Matrix.hpp  Mlm.h  Mlm.hpp  Quaternion.h  Quaternion.hpp  Vector3d.h  Vector3d.hpp
lib/src/: Commons.c  Commons.cpp  Coordinates.c  Coordinates.cpp  GPSAccKalman.c  GPSAccKalman.cpp  Geohash.c  Geohash.cpp  GpsAccFusionFilter.c  GpsAccFusionFilter.cpp  Kalman.c  Kalman.cpp  MadgwickAHRS.c  MadgwickAHRS.cpp  Matrix.c  Matrix.cpp  Mlm.c  Mlm.cpp  Quaternion.c  Quaternion.cpp  Vector3d.c  Vector3d.cpp
lib/tests/: CoordinatesTest.cpp  GeohashTest.cpp  MatrixTest.cpp  main.cpp
lib/visualizator/: .clang-format  .gitignore  .nvim.lua  CMakeLists.txt  CppCheckSuppressions.txt  README.md
lib/visualizator/filter/: .nvim.lua  CMakeLists.txt
lib/visualizator/filter/exe/: main.cpp
lib/visualizator/filter/inc/: commons.h  gps_acc_fusion_filter.h  kalman.h  low_pass.h  mlm.h  sd_generator.h  sensor_data.h
lib/visualizator/filter/src/: commons.cpp  gps_acc_fusion_filter.cpp  mlm.cpp  sd_generator.cpp  sensor_data.cpp
lib/visualizator/filter/tests/: coordinate_test.cpp  sd_generator_test.cpp  sensor_data_test.cpp
lib/visualizator/inc/: main_window.h  sensor_data.h  vis_commons.h  w_filter_settings.h  w_generator_settings.h
lib/visualizator/resources/: map_marker_green.h
lib/visualizator/src/: main.cpp  main_window.cpp  w_filter_settings.cpp  w_generator_settings.cpp
lib/visualizator/ui/: mlm.cmb  mlm.ui
log-transfer-object/: pom.xml
madlocationmanager/: build.gradle  local.properties
madlocationmanager/src/main/: AndroidManifest.xml
server/: pom.xml
visualization/: prepare.sh  visualizer.pro
visualization/include/: SensorController.h  mainwindow.h
visualization/src/: SensorController.cpp  main.cpp
(+353 files in other folders)
